2015-09-09 Gregory L. Lee <lee218@llnl.gov>
	* : allow passing of argc and argv to probe sessions (Jira STAT-17)

2015-08-24 Gregory L. Lee <lee218@llnl.gov>
	* : don't replicate "prepare" of Actions when reused

2015-08-24 Jesper Nielsen
	* probe_be.cpp : decrement awaitingActions count for each action

2015-08-11 Jesper Nielsen
	* backend.cpp : modified handleTimerActions to avoid mutex deadlock

2015-07-28 Gregory L. Lee <lee218@llnl.gov>, Jesper Nielsen
	* : added DySectAPI probe tree visualizer
	* : DySectAPI FE create .dot file with probe tree

2015-07-22 Gregory L. Lee <lee218@llnl.gov>
	* : Created mock DynInst header file for FE
	* : Some cleaning of header files and includes

2015-07-10 Gregory L. Lee <lee218@llnl.gov>
	* err.[C,h] : better control of DySectAPI verbosity and logging

2015-07-10 Gregory L. Lee <lee218@llnl.gov>
	* : DySectAPI filter function should only merge packets with same tag

2015-07-08 Gregory L. Lee <lee218@llnl.gov>
	* : DySectAPI filter should process messages in received order

2015-07-02 Gregory L. Lee <lee218@llnl.gov>
	* : Fixes for probes pending library load

2015-07-01 Gregory L. Lee <lee218@llnl.gov>
	* STAT_FrontEnd : FGFS recv only on expected streams, not all streams

2015-06-15 Gregory L. Lee <lee218@llnl.gov>
	* action* : added Null Action
	* location_be.cpp : make sure process is stopped before inserting breakpoint

2015-06-12 Gregory L. Lee <lee218@llnl.gov>
	* STAT_FrontEnd.C : added appropriate #ifdef STAT_FGFS pragma
	* symbol.cpp : don't return redundant addresses for symbol resolution

2015-06-05 Gregory L. Lee <lee218@llnl.gov>
	* : fix for Jira STAT-12, DySect + FGFS hang

2015-06-01 Gregory L. Lee <lee218@llnl.gov>
	* : tag version 2.2.0

2015-05-29 Gregory L. Lee <lee218@llnl.gov>
	* config/x_ac_mrnet : removed xmlrpc lib dependence for cray-xt

2015-04-03 Gregory L. Lee <lee218@llnl.gov>
	* : updated build system files

2015-04-02 Gregory L. Lee <lee218@llnl.gov>
	* : module offset fixes and enhancements